<resources>
    <string name="app_name">Learn Language With Quotes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding_title">LEARN LANGUAGE WITH\nQUOTES</string>
    <string name="native_language">Native Language</string>
    <string name="target_language">Target Language</string>
    <string name="submit_btn">Submit</string>
    <string name="onboarding_choice_text">You can change your choice later again</string>
    <string name="quote_label"><u>The Quote</u></string>
    <string name="owner_label"><u>Owner</u></string>
    <string name="tags_label"><u>Tags</u></string>

    <string-array name="target_languages">
        <item>en</item>
        <item>es</item>
        <item>pt</item>
        <item>it</item>
        <item>fr</item>
        <item>de</item>
        <item>cs</item>
        <item>sk</item>
    </string-array>
    <string-array name="native_languages">
        <item>en</item>
        <item>es</item>
        <item>pt</item>
        <item>tr</item>
        <item>it</item>
        <item>mk</item>
        <item>da</item>
        <item>ar</item>
        <item>zh-CN</item>
        <item>zh-TW</item>
        <item>ja</item>
        <item>fr</item>
        <item>de</item>
        <item>ru</item>
        <item>cs</item>
        <item>sk</item>
    </string-array>
</resources>